<resources>
    <string name="name_my_apps">My Apps</string>
    <string name="name_myself">About myself</string>
    <string name="name_diceroller_app">Diceroller App</string>
    <string name="name_mymycolor_app">MymyColor App</string>
    <string name="name_trivia_app">Trivia App</string>
    <string name="name_about_myapp">"Hello!"
        "\n\n\n   This application was created based on my knowledge during learning about course:"
        "Android Kotlin Fundamentals codelabs, which great for a beginner to programming"
        "\n\n   For each lesson I create an app, all of the apps are on the hidden menu bar on the"
        "left side of the screen. Each application will have instructions on how to play and the"
       "knowledge to be used. On the other hand, these applications have some improvements over the"
        "program's applications."
        "\nPlease check in the menu on the left."
        "\n\n\nThank you! Have a good time!"</string>


    <string name="app_name">Mapps</string>
    <string name="bt_rollsum_main">ROLL SUM</string>
    <string name="bt_rollrandom_main">ROLL R.DOM</string>
    <string name="bt_next">NEXT</string>
    <string name="bt_back">BACK</string>
    <string name="bt_done_2">DONE</string>
    <string name="bt_set_all_3">SET ALL</string>
    <string name="bt_reset_3">RESET</string>
    <string name="name_activity_main">Diceroller</string>
    <string name="name_activity_2">About My Kotlin App</string>
    <string name="name_activity_3">ColorMyMy</string>
    <string name="name_activity_trivia">Trivia</string>
    <string name="name_textview_main">Sum you want!</string>
    <string name="name_hint_edt_1_2">What is app?</string>
    <string name="name_hint_edt_1_main">Please fill in your sum!</string>
    <string name="name_box_one_3">Box One</string>
    <string name="name_box_two_3">My Image</string>
    <string name="name_box_three_3">Box Three</string>
    <string name="name_label_text_3">How to play:</string>
    <string name="name_description_3">Tap the sreen</string>
    <string name="name_list_feature_app_2">\n1. Introduce
    \n2. ColorMyMy
    \n3. Dice Roller App
    \n4. Trivia</string>
    <string name="name_box_four_3">Box Four</string>
    <string name="name_box_five_3">Box Five</string>
    <string name="bt_setimg_3">SET IMG</string>
    <string name="name_box_six_3">Box Six</string>
    <string name="name_box_seven_3">Box Seven</string>
    <string name="bt_update_2">UP</string>
    <string name="name_text_note_2">Do you want updates this name?</string>
    <string name="name_bt_no_2">N0!</string>
    <string name="trivia_about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.
        \n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.
        \n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_submit_button_trivia">Submit</string>
    <string name="try_again">Try Again?</string>
    <string name="about">About</string>
    <string name="rules">Rules</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="play_button">Play</string>
    <string name="next_match">Next Match</string>
    <string name="share_success_text">I mastered AndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="share">Share</string>
    <string name="please_fill_in_number_of_question_default_5">Please fill in number of question, default:5!!</string>
    <string name="dessert_click_app">Dessert Click App</string>
    <string name="dessert_sold">Desserts Sold</string>
    <string name="share_text">I\'ve clicked %1$d Desserts for a total of %2$d$ #AndroidDessertClicker</string>
    <string name="sharing_not_available">Sharing Not Available</string>

    <string name="dessert_revenue_format">%d</string>
    <string name="dessert_amount_format">%d pieces</string>


    <string name="guess_app_name">Guess the Word</string>
    <string name="guess_skip">Skip</string>
    <string name="guess_play_again">Play Again</string>
    <string name="guess_you_scored">You Scored</string>
    <string name="guess_title_text">Guess the word!</string>
    <string name="guess_play_button">Play</string>
    <string name="guess_get_ready">Get ready to</string>
    <string name="guess_got_it">Got it</string>
    <string name="guess_end_game">End game</string>
    <string name="guess_word_is">The word is…</string>
    <string name="name_guesstheword_app">Guess The Word App</string>
    <string name="guess_button_play_again">PLAY AGAIN</string>
    <string name="guess_quote_format">\"%s\"</string>
    <string name="guess_score_format">Current Score: %d</string>

</resources>
