<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/myselfFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/name_myself" />
    <item
        android:id="@+id/dicerollerFragment"
        android:icon="@drawable/dice_1"
        android:title="@string/name_diceroller_app" />
    <item
        android:id="@+id/mymycolorFragment"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/name_mymycolor_app" />
    <item
        android:id="@+id/triviaFragmentTitle"
        android:icon="@drawable/nav_header"
        android:title="@string/name_trivia_app"></item>
    <item
        android:id="@+id/dessertClickFragment"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/dessert_click_app" />
    <item
        android:id="@+id/guessthewordFragmentTitle"
        android:icon="@android:drawable/ic_lock_lock"
        android:title="@string/name_guesstheword_app" />
</menu>