<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DicerollerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@android:string/cancel"
                app:srcCompat="@drawable/dice_1"
                tools:src="@drawable/dice_1" />

            <ImageView
                android:id="@+id/img_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@android:string/cancel"
                app:srcCompat="@drawable/dice_1"
                tools:src="@drawable/dice_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/bt_roll_sum_2"
                style="@style/Button_lagre"
                android:text="@string/bt_rollsum_main">

            </Button>

            <Button
                android:id="@+id/bt_roll_random_2"
                style="@style/Button_lagre"
                android:text="@string/bt_rollrandom_main">

            </Button>
        </LinearLayout>

        <EditText
            android:id="@+id/edt_1"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="@android:string/cancel"
            android:hint="@string/name_hint_edt_1_main"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        </EditText>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>